[tool.poetry]
name = "aldotaibot"
version = "2.3"
description = ""
authors = ["kaixinol <keiplyer@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"
creart = "^0.2.2"
html2text = "^2020.1.16"
loguru = "^0.6.0"
psutil = "^5.9.4"
pyjson5 = "^1.6.2"
graia-ariadne = "^0.10.3"
graia-saya = "^0.0.17"
graia-scheduler = "^0.1.4"
arclet-alconna = "^1.4.2.1"
pillow = "^9.4.0"
filetype = "^1.2.0"
aiosocksy = "^0.1.2"
sqlalchemy = "^1.4.46"
arclet-alconna-graia = "^0.10.6"
graiax-shortcut = "^0.2.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
